# VSSR

./: .gitignore  CMakeLists.txt  VSSR.docx  todo.md
lib/stb/: stb_true_type.h
src/: barva.cpp  barva.h  besedilo.cpp  besedilo.h  cas.cpp  cas.h  define.h  dnevnik.cpp  dnevnik.h  igra_scena.cpp  igra_scena.h  kamen.h  kamera_2D.cpp  kamera_2D.h  kamera_3D.cpp  kamera_3D.h  kolizija.cpp  main.cpp  mat3.cpp  mat4.cpp  matematika.cpp  matematika.h  nastaviteve_scena.h  nastavitve_scena.cpp  navodila_scena.cpp  navodila_scena.h  nebesna_kocka.cpp  nebesna_kocka.h  obj.cpp  objekt_2D.cpp  objekt_2D.h  objekt_3D.cpp  objekt_3D.h  odjemalec.cpp  odjemalec.h  pisava.cpp  pisava.h  risalnik.cpp  risalnik.h  scena.h  (+14 more)
sredstva/: izstrelek.mtl  modra_zadeva.mtl  nastavitve.txt  pocivalisce.mtl  raketa.mtl
sredstva/kamni/: K1.mtl  podatki_o_kamnih.txt
